--- a/indexx.html
+++ b/indexx.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <title>My Portfolio Webpage</title>
+    <title>My Portfolio </title>
 
     <style>
 
