--- a/index.html
+++ b/index.html
@@ -1,487 +1,379 @@
-<!---Log-in-->
-
 <!DOCTYPE html>
-
 <html lang="en">
-
-
-
 <head>
-
-    <meta charset="UTF-8">
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
-    <title>My Portfolio </title>
-
-    <style>
-
-        * {
-
-            margin: 0;
-
-            padding: 0;
-
-        }
-
-
-
-        body {
-
-            /* font-family: 'Josefin Sans', sans-serif; */
-
-            font-family: 'Poppins', sans-serif;
-
-            max-height: 100vh;
-
-            background-color: #1F252E;
-
-        }
-
-
-
-        /*nav */
-
-        header {
-
-            padding: 1.7rem 1rem;
-
-            background-color: #fff;
-
-            display: flex;
-
-            justify-content: space-between;
-
-            max-width: 80%;
-
-            margin: auto;
-
-            align-items: center;
-
-            background-color: transparent;
-
-        }
-
-
-
-        .logo {
-
-            font-size: 1.3rem;
-
-            font-weight: 800;
-
-        }
-
-
-
-        .logo a {
-
-            color: #fff;
-
-            text-decoration: none;
-
-        }
-
-
-
-        nav a {
-
-            color: #fff;
-
-            text-decoration: none;
-
-            font-size: .97rem;
-
-            font-weight: 600;
-
-            letter-spacing: .7px;
-
-            padding: 1rem;
-
-            padding: 0.4rem 1rem;
-
-        }
-
-
-
-        nav a.active,
-
-        nav a:hover {
-
-            color: #00E8F8;
-
-            border-radius: 1rem;
-
-            transition: all.3s ease-in-out;
-
-        }
-
-
-
-        #click {
-
-            display: none;
-
-        }
-
-
-
-        .menu i {
-
-            color: #00E8F8;
-
-        }
-
-
-
-        .menu {
-
-            display: none;
-
-        }
-
-
-
-        /* Nav */
-
-
-
-        section {
-
-            margin: 2rem 8.5rem;
-
-            ;
-
-        }
-
-
-
-        .main {
-
-            display: flex;
-
-            flex-wrap: wrap;
-
-            justify-content: space-between;
-
-            align-items: center;
-
-            margin: 5rem auto;
-
-        }
-
-
-
-        .main h1 {
-
-            font-size: 2.5rem;
-
-            font-weight: 600;
-
-            color: #fff;
-
-            /* animation: check 1s ease forwards;
-
-            animation-delay: .1s; */
-
-        }
-
-
-
-        .main p {
-
-            margin-top: 1rem;
-
-            font-size: .98rem;
-
-            color: #fff;
-
-        }
-
-
-
-        .social {
-
-            display: flex;
-
-            flex-wrap: wrap;
-
-            gap: 1.4rem;
-
-            margin-top: 1.7rem;
-
-        }
-
-
-
-        .social a {
-
-            color: #00E8F8;
-
-            font-size: 1rem;
-
-            border: 1.6px solid #00E8F8;
-
-            border-radius: 50%;
-
-            padding: .35rem;
-
-            text-align: center;
-
-            width: 26px;
-
-        }
-
-
-
-        .social a:hover {
-
-            color: #1F252E;
-
-            background-color: #00E8F8;
-
-            box-shadow: 0 0 20px #00E8F8;
-
-            transition: all .3s ease-in-out;
-
-        }
-
-
-
-        .main h1 span:nth-child(1) {
-
-            font-size: 1.5rem;
-
-        }
-
-
-
-        .main h1 span:nth-child(2) {
-
-            color: #00E8F8;
-
-        }
-
-
-
-        .images {
-
-            background-image: url(/img/graph5.png);
-
-            background-repeat: no-repeat;
-
-            background-position: 0 -75px;
-
-            -webkit-box-shadow: 0 10px 10px -10px #000000;
-
-            -moz-box-shadow: 0 10px 10px -10px #000000;
-
-            box-shadow: 0px 16px 4px -10px #00E8F8;
-
-            width: 528px;
-
-            background-size: cover;
-
-        }
-
-
-
-        /* @keyframes check {
-
-            0% {
-
-                transform: translateY(-100px);
-
-                opacity: 0;
-
-            }
-
-
-
-            100% {
-
-                transform: translateY(0);
-
-                opacity: 1;
-
-            }
-
-        } */
-
-
-
-        @media only screen and (max-width:480px) {
-
-            .menu {
-
-                display: block;
-
-                font-size: 1.5rem;
-
-                font-weight: bold;
-
-                color: #244D61;
-
-            }
-
-
-
-            header {
-
-                padding: 0.7rem 1rem;
-
-                align-items: center;
-
-                max-width: 100%;
-
-            }
-
-
-
-            nav {
-
-                position: absolute;
-
-                display: grid;
-
-                top: 75px;
-
-                text-align: center;
-
-                background-color: #1F252E;
-
-                left: -100%;
-
-                z-index: 1;
-
-                width: 100%;
-
-            }
-
-
-
-            #click:checked~nav {
-
-                left: 0%;
-
-                transition: all 0.3s ease;
-
-            }
-
-
-
-            section {
-
-                margin: 1rem 1.5rem;
-
-            }
-
-
-
-        }
-
-    </style>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
+
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      color: black;
+      background-color: #f7f7f7;
+      line-height: 1.6;
+    }
+
+    /* Header */
+    header {
+      background: #111;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header a {
+      color: white;
+      margin-left: 30px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    header a:hover {
+      color: red;
+    }
+
+    /* Hero Section */
+    .hero {
+      background: url('hero-background.jpg') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding: 150px 20px;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      background-color: rgba(0, 0, 0, 0.7);
+      animation: fadeIn 1.5s ease-in-out;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      margin: 0;
+      font-weight: 700;
+    }
+
+    .hero p {
+      font-size: 1.8rem;
+      margin: 10px 0 20px;
+      color: red;
+    }
+
+    .hero .cta-btn {
+      background: red;
+      color: white;
+      padding: 12px 30px;
+      text-decoration: none;
+      font-weight: 500;
+      border-radius: 5px;
+      transition: all 0.3s;
+    }
+
+    .hero .cta-btn:hover {
+      background: white;
+      color: red;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    /* About Section */
+    .about {
+      display: flex;
+      padding: 80px 40px;
+      background-color: white;
+      align-items: center;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .about img {
+      border-radius: 50%;
+      border: 5px solid red;
+      margin-right: 50px;
+    }
+
+    .about .about-text {
+      max-width: 600px;
+    }
+
+    .about h2 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 20px;
+      color: #111;
+    }
+
+    .about p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: #333;
+    }
+
+    .about a {
+      background: red;
+      color: white;
+      padding: 10px 25px;
+      text-decoration: none;
+      font-weight: 500;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    .about a:hover {
+      background: #ff4d4d;
+    }
+
+    /* Skills Section */
+    .skills {
+      background: #111;
+      color: white;
+      padding: 100px 40px;
+      text-align: center;
+    }
+
+    .skills h2 {
+      color: red;
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 40px;
+    }
+
+    .skills .skill-bars {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+    }
+
+    .skills .skill-bars div h3 {
+      font-weight: 500;
+      color: white;
+      margin-bottom: 10px;
+    }
+
+    .skills .skill-bars div .progress {
+      background: white;
+      border-radius: 5px;
+      height: 25px;
+      position: relative;
+    }
+
+    .skills .skill-bars div .progress::before {
+      content: '';
+      background: red;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    .skills .skill-bars div:nth-child(1) .progress::before {
+      width: 90%;
+    }
+
+    .skills .skill-bars div:nth-child(2) .progress::before {
+      width: 85%;
+    }
+
+    .skills .skill-bars div:nth-child(3) .progress::before {
+      width: 80%;
+    }
+
+    /* Projects Section */
+    .projects {
+      padding: 100px 40px;
+      background-color: white;
+    }
+
+    .projects h2 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
+    .project-item {
+      margin-bottom: 20px;
+    }
+
+    /* Contact Section */
+    .contact {
+      padding: 100px 40px;
+      background-color: #f7f7f7;
+    }
+
+    .contact h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    .contact form {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .contact input, .contact textarea {
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    .contact button {
+      background: red;
+      color: white;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .contact button:hover {
+      background: #ff4d4d;
+    }
+
+    /* Footer */
+    footer {
+      background: #111;
+      padding: 30px;
+      color: white;
+      text-align: center;
+    }
+
+    footer a {
+      color: red;
+      text-decoration: none;
+    }
+
+    /* Social Media Links */
+    .social-links {
+      margin-top: 20px;
+    }
+
+    .social-links a {
+      color: white;
+      margin: 0 10px;
+      font-size: 1.5rem;
+      transition: color 0.3s;
+    }
+
+    .social-links a:hover {
+      color: red;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+  </style>
 </head>
-
-
-
 <body>
 
-    <header>
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <h1 style="color:red;">NIRAJ DHUNGANA</h1>
+    </div>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-        <div class="logo">
+  <!-- Hero Section -->
+  <section class="hero" id="home">
+    <h1>Niraj Dhungana.</h1>
+    <p>DevOps Engineer | Django Developer</p>
+    <a href="#projects" class="cta-btn">View My Work</a>
+  </section>
 
-            <a href="#">Logo.</a>
+  <!-- About Section -->
+  <section class="about" id="about">
+    <img src="Niraj.jpg" alt="Your Image" width="200">
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>I am a DevOps Engineer and Django Developer with experience in building scalable infrastructures and deploying applications.</p>
+      <a href="NIRAJ_DHUNGANA_CV.pdf" class="cta-btn">Download CV</a>
+    </div>
+  </section>
 
-        </div>
+  <!-- Skills Section -->
+  <section class="skills" id="skills">
+    <h2>Skills</h2>
+    <div class="skill-bars">
+      <div>
+        <h3>DevOps</h3>
+        <div class="progress"></div>
+      </div>
+      <div>
+        <h3>Django</h3>
+        <div class="progress"></div>
+      </div>
+      <div>
+        <h3>Python</h3>
+        <div class="progress"></div>
+      </div>
+    </div>
+  </section>
 
-        <input type="checkbox" id="click">
+  <!-- Projects Section -->
+  <section class="projects" id="projects">
+    <h2>Projects</h2>
+    <div class="project-item">
+      <h3>Project 1</h3>
+      <p>Description of Project 1.</p>
+    </div>
+    <div class="project-item">
+      <h3>Project 2</h3>
+      <p>Description of Project 2.</p>
+    </div>
+    <div class="project-item">
+      <h3>Project 3</h3>
+      <p>Description of Project 3.</p>
+    </div>
+  </section>
 
-        <label for="click" class="mainicon">
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2>Contact Me</h2>
+    <form action="send_email.php" method="post">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
-            <div class="menu">
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Niraj Dhungana. All rights reserved.</p>
 
-                <i class="bi bi-list"></i>
+    <!-- Social Media Links -->
+    <div class="social-links">
+      <a href="https://www.facebook.com/niraj.dhungana.583?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/niraj.dhungana/profilecard/?igsh=cG9oZDQwbmF6bzBx" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://np.linkedin.com/in/niraj-dhungana-76a61120a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://github.com/Niraaaaaj/" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
 
-            </div>
-
-        </label>
-
-        <nav>
-
-            <a href="#" class="active">Home</a>
-
-            <a href="#">About</a>
-
-            <a href="#">Skills</a>
-
-            <a href="#">Portfolio</a>
-
-            <a href="#">Contact</a>
-
-        </nav>
-
-    </header>
-
-
-
-
-
-    <section>
-
-        <div class="main">
-
-            <div class="detail"><!---Sarah -->
-
-                <h1><span>Hi, It's Me</span> <br> I'm <span style="color:#00E8F8;">Aura</span></h1>
-
-                <p>Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry. </p>
-
-                <div class="social">
-
-                    <a href="#"><i class="bi bi-github"></i></a>
-
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
-
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-
-                </div>
-
-            </div>
-
-            <div class="images">
-
-                <img src="/img/pass.png" alt="" width="100%">
-
-            </div>
-
-        </div>
-
-    </section>
-
-
+    <a href="#top">Back to top</a>
+  </footer>
 
 </body>
-
-<style>
-
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
-
-</style>
-
-<!-- <style>
-
-    @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
-
-  </style> -->
-
-
-
 </html>
