--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <div class="about-text">
       <h2>About Me</h2>
       <p>I am a DevOps Engineer and Django Developer with experience in building scalable infrastructures and deploying applications.</p>
-      <a href="NIRAJ_DHUNGANA_CV.pdf" class="cta-btn">Download CV</a>
+      <a href="Portfolio/NIRAJ_DHUNGANA_CV.pdf" download="Niraj_Dhungana_CV.pdf" class="cta-btn">Download CV</a>
     </div>
   </section>
 
