--- a/index.html
+++ b/index.html
@@ -310,7 +310,6 @@
       <h2>About Me</h2>
       <p>I am a DevOps Engineer and Django Developer with experience in building scalable infrastructures and deploying applications.</p>
       <a href="https://Niraaaaaj.github.io/Test/NIRAJ_DHUNGANA_CV.pdf" download="Niraj_Dhungana_CV.pdf" class="cta-btn">Download CV</a>
-
     </div>
   </section>
 
@@ -337,16 +336,16 @@
   <section class="projects" id="projects">
     <h2>Projects</h2>
     <div class="project-item">
-      <h3>Project 1</h3>
-      <p>Description of Project 1.</p>
+      <h3>Automated Form Filler</h3>
+      <p>A Python application to automatically fill faculty feedback forms. Tools used: Selenium, Python, ChromeDriver, HTML DOM.</p>
     </div>
     <div class="project-item">
-      <h3>Project 2</h3>
-      <p>Description of Project 2.</p>
+      <h3>Student Management System</h3>
+      <p>A web application for managing student and staff records, attendance, courses, etc. Tools used: PHP, MySQL, HTML, CSS, JavaScript.</p>
     </div>
     <div class="project-item">
-      <h3>Project 3</h3>
-      <p>Description of Project 3.</p>
+      <h3>Online Car Rental System</h3>
+      <p>A Python-based web application to rent vehicles for a specific number of days according to user needs. Tools used: Python, Flask, MySQL DB.</p>
     </div>
   </section>
 
