--- a/index.html
+++ b/index.html
@@ -27,29 +27,6 @@
             padding: 60px 0;
         }
 
-        .navbar {
-            background-color: #333;
-            padding: 10px 0;
-        }
-
-        .navbar .container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .navbar a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-
-        .navbar a:hover {
-            background-color: #48BB78;
-            border-radius: 5px;
-        }
-
         .profile-img {
             border-radius: 50%;
             width: 150px;
@@ -107,24 +84,21 @@
             margin-bottom: 10px;
         }
 
-        .contact-form input, .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        .contact-buttons {
+            margin-top: 20px;
         }
 
-        .contact-form button {
+        .contact-buttons .btn {
+            display: inline-block;
             background-color: #48BB78;
             color: white;
             padding: 10px 20px;
-            border: none;
+            text-decoration: none;
             border-radius: 5px;
-            cursor: pointer;
+            margin-right: 10px;
         }
 
-        .contact-form button:hover {
+        .contact-buttons .btn:hover {
             background-color: #38A169;
         }
 
@@ -148,29 +122,14 @@
 </head>
 <body>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">
-                <a href="#about">Home</a>
-            </div>
-            <div class="nav-links">
-                <a href="#about">About</a>
-                <a href="#skills">Skills</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
-            </div>
-        </div>
-    </nav>
-
     <!-- Header Section -->
     <header>
         <div class="container">
             <div class="profile">
-                <img src="Niraj.jpg" alt="Niraj Dhungana" class="profile-img">
+                <img src="your-image.jpg" alt="Niraj Dhungana" class="profile-img">
                 <h1>Niraj Dhungana</h1>
                 <p class="tagline">Django Developer | DevOps Enthusiast</p>
-                <a href="NIRAJ_DHUNGANA_CV.pdf" class="btn" target="_blank">Download CV</a>
+                <a href="https://nirajdhungana.com.np/NIRAJ_DHUNGANA_CV.pdf" class="btn" target="_blank">Download CV</a>
             </div>
         </div>
     </header>
@@ -233,30 +192,27 @@
         </div>
     </section>
 
-   <!-- Contact Section -->
-<section id="contact">
-    <div class="container">
-        <h2>Contact Me</h2>
-        <p>If you would like to collaborate or have any questions, feel free to contact me using the form below.</p>
-        <form class="contact-form" action="mailto:nirajdhunganaofficial@gmail.com" method="POST" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
-</section>
-
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>If you would like to collaborate or have any questions, feel free to reach out to me:</p>
+            <div class="contact-buttons">
+                <a href="mailto:nirajdhungana0fficial@gmail.com" class="btn">Send Email</a>
+                <a href="tel:+9779808243112" class="btn">Call Me</a>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer Section -->
     <footer>
         <div class="container">
             <p>&copy; 2024 Niraj Dhungana. All Rights Reserved.</p>
             <div class="social-icons">
-                <a href="https://www.facebook.com/niraj.dhungana.583?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/niraj.dhungana/profilecard/?igsh=cG9oZDQwbmF6bzBx" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://np.linkedin.com/in/niraj-dhungana-76a61120a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/Niraaaaaj/" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/nirajdhungana" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/nirajdhungana" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://twitter.com/nirajdhungana" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="mailto:nirajdhungana0fficial@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </footer>
