--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <header>
         <div class="container">
             <div class="profile">
-                <img src="your-image.jpg" alt="Niraj Dhungana" class="profile-img">
+                <img src="Niraj.jpg" alt="Niraj Dhungana" class="profile-img">
                 <h1>Niraj Dhungana</h1>
                 <p class="tagline">Django Developer | DevOps Enthusiast</p>
                 <a href="https://nirajdhungana.com.np/NIRAJ_DHUNGANA_CV.pdf" class="btn" target="_blank">Download CV</a>
