--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <h2>Contact Me</h2>
             <p>If you would like to collaborate or have any questions, feel free to reach out to me:</p>
             <div class="contact-buttons">
-                <a href="mailto:nirajdhungana0fficial@gmail.com" class="btn">Send Email</a>
+                <a href="mailto:nirajdhunganaofficial@gmail.com" class="btn">Send Email</a>
                 <a href="tel:+9779808243112" class="btn">Call Me</a>
             </div>
         </div>
